# W3Editor

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  IMPLEMENTATION_STEPS.md  PROJECT_PLAN.md  README.md  TEST_CHECKLIST.md  W3EditorNext规划.md  build_debug.bat  run_debug.bat  vcpkg.json
.claude/: settings.local.json
.cursor/rules/: w3editor-project.mdc
app/: Cargo.toml
app/src/: main.rs
core-map/: Cargo.toml
core-map/src/: command.rs  doo.rs  lib.rs  mode.rs  mpq.rs  property.rs  w3e.rs  w3i.rs
data/shaders/: skinned_mesh_hd.frag  skinned_mesh_sd.frag
data/themes/: Dark.qss  Light.qss
docs/: classic_terrain_editor_plan.md
engine/core/: Result.h
engine/formats/archive/: DirectoryArchive.cpp  DirectoryArchive.h  IArchive.h  MpqArchive.cpp  MpqArchive.h
overlay-ports/soil2/: portfile.cmake
render-wgpu/: Cargo.toml
render-wgpu/src/: lib.rs
src/: CMakeLists.txt  globals.ixx  main.cpp  types.ixx
src/asset_manager/: asset_manager.cpp  asset_manager.h
src/base/: camera.cpp  camera.ixx  doodad.cpp  doodad.ixx  doodads.cpp  doodads.ixx  gameplay_constants.ixx  hierarchy.cpp  hierarchy.ixx  imports.ixx  physics.ixx  render_manager.cpp  render_manager.ixx  resource_manager.cpp  resource_manager.ixx  shadow_map.ixx  terrain.ixx  units.ixx  window_handler.cpp  window_handler.ixx
src/base/map/: map.ixx  unused_files.cpp
src/base/triggers/: map_script.cpp  triggers.ixx
src/brush/: brush.cpp  doodad_brush.cpp  terrain_brush.cpp  terrain_brush.h  terrain_operators.cpp  terrain_operators.h  unit_brush.cpp
src/custom_widgets/: qribbon.ixx
src/editor/: editor_context.cpp  editor_context.h
src/file_formats/: casc.ixx  ini.ixx  mpq.ixx  slk.ixx
src/file_formats/mdx/: mdl_reader.cpp  mdl_writer.cpp  validator.cpp
src/main_window/: W3Editor.qrc  W3Editor.rc  W3Editor.ui  glwidget.cpp  hivewe.cpp  hivewe.h  localized_texts.cpp  localized_texts.h  main_ribbon.cpp  main_ribbon.h  map_load_report_formatter.cpp  map_load_report_formatter.h  terrain_gl_widget.cpp  terrain_gl_widget.h  w3editor.cpp  w3editor.h  w3editor_map.cpp  w3editor_preview.cpp  w3editor_ui_layout.cpp  w3editor_ui_menu.cpp
src/map_io/: binary_reader.h  game_data_loader.cpp  game_data_loader.h  map_loader.cpp  map_loader.h  terrain_model.cpp  terrain_model.h  w3e_loader.cpp  w3e_loader.h
src/menus/: doodad_palette.cpp  gameplay_constants_editor.cpp  map_info_editor.cpp  minimap.cpp  palette.cpp  pathing_palette.cpp  settings_editor.cpp  settings_editor.h  terrain_palette.cpp  tile_pather.cpp  tile_picker.cpp  tile_setter.cpp  unit_palette.cpp
src/model_editor/: model_editor.h  model_editor_glwidget.cpp  model_editor_glwidget.h
src/models/: single_model.cpp  table_model.ixx
src/models/list/: destructible_list_model.ixx  doodad_list_model.ixx  unit_list_model.ixx
src/models/tree/: ability_tree_model.ixx  base_tree_model.ixx  destructible_tree_model.ixx  doodad_tree_model.ixx  unit_tree_model.ixx
src/object_editor/: global_search.h  icon_view.cpp  model_view.cpp  object_editor.cpp  object_editor.h  slk_conversions.ixx
src/qt_imgui/: imgui_renderer.cpp
src/resources/: cliff_mesh.ixx  editable_mesh.ixx  gpu_texture.ixx  ground_texture.ixx  qicon_resource.ixx  skinned_mesh.ixx  texture.ixx
src/resources/skinned_mesh/: skeletal_model_instance.ixx
src/trigger_editor/: jass_editor.cpp  trigger_editor.cpp  trigger_editor.h  trigger_editor.ui  trigger_model.cpp
src/utilities/: gl_thread_pool.cpp  gl_thread_pool.ixx  modification_tables.ixx  opengl_utilities.cpp  opengl_utilities.ixx  timer.ixx  utilities.ixx
tests/archive_tests/: ArchiveTests.cpp
tools/w3editor_cli/: main.cpp
ui-slint/: Cargo.toml  build.rs
ui-slint/src/: lib.rs
ui-slint/ui/: main.slint
